# DanskeBiblioteker-HomeAssistant

./: .pylintrc  LICENSE  README.md  app.py  hacs.json  libraries.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.yml  issue.yml
.github/workflows/: HACS.yaml  linting.yaml
custom_components/danish_libraries/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  libraries.json  manifest.json  sensor.py  strings.json
custom_components/danish_libraries/models/: LibraryConfig.py  Rerservation.py  __init__.py  ereolen_loan.py  ereolen_reservation.py  library_config.py  loan.py  profile_info.py  reservation.py
custom_components/danish_libraries/translations/: da.json  en.json
tests/: test_api.py
