[project]
name = "danskebiblioteker-homeassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pylint>=3.3.1",
    "httpx>=0.27.2",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
